--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,74 +2,6 @@ body {
     margin: 0;
 }
 
-.main-container {
+#main-container {
     height: 100%;
-    -webkit-transition: all 1s;
-    -moz-transition: all 1s;
-    -o-transition: all 1s;
-    transition: all 1s;
-    animation: background 6s ease-in 1s infinite;
 }
-
-@keyframes background {
-    0% {
-        background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-    }
-
-    50% {
-        background:  linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
-    }
-
-    100% {
-        background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-    }
-}
-
-.background {
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    opacity: 0;
-    background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-}
-
-.background.show {
-    opacity: 1 !important;
-}
-
-.text {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: transparent;
-    font-family: 'Circular';
-    font-size: 50px;
-    font-weight: bold;
-    background: inherit;
-    -webkit-background-clip: text;
-    background-clip: text;
-    filter: invert(1) grayscale(1) contrast(9);
-    letter-spacing: 2px;
-}
-.text::after {
-    z-index: 20;
-    mix-blend-mode: exclusion;
-}
-/*
-background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
-background-image: linear-gradient(-20deg, #6e45e2 0%, #88d3ce 100%);
-background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
-background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
-background-image: linear-gradient(to top, #3b41c5 0%, #a981bb 49%, #ffc8a9 100%);
-background-image: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%);
-background-image: linear-gradient(-45deg, #FFC796 0%, #FF6B95 100%);
-background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
-background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 100%);
-background-image: linear-gradient(to right, #ed6ea0 0%, #ec8c69 100%);
-background-image: linear-gradient(-225deg, #2CD8D5 0%, #6B8DD6 48%, #8E37D7 100%);
-*/
